2023-06-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCClrange.c:
	  Fix a corner case in live-range separation that would hang SDCC on compiling the pic14 library (and result in some missed optimizations for other ports).
	* src/pdk/gen.c:
	  Fix a pdk codegen issue that could result in invalid asm for pdk13 on bitwise and in if condition.

2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/stdckdint.h:
	  Work around an issue in inlining _Generic results to mitigate strtotul code size regression.

2023-06-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.h:
	  Store operands of IFX and JUMPTAB the same way as operands of other iCodes.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/MakeList:
	  Disable tests that fail due to known -ms08 --stack-auto bugs.
	* doc/sdccman.lyx:
	  Document hc08/s08 struct/union parameter support.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  src/mos6502/gen.c,
	  src/z80/gen.c:
	  support/regression/MakeList:
	  Fix a right-shift codegen sign issue triggered by register packing.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c,
	  support/regression/MakeList:
	  Catch bug #3598 early.

2023-06-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c:
	  Fix stacked hx result in shifts.
	* support/regression/MakeList:
	  Exclude some tests that need features not yet supported by s08 from s08-stack-auto testing.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/gen.c:
	  hc08/s08 --stack-auto struct/union parameters.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCsymt.c,
	  src/hc08/gen.c:
	  Caller-side support for hc08/s08 struct/union return.

2023-06-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Improve z80 rotation.
	* src/mcs51/ralloc.c: