@@ -4,6 +4,8 @@
 	  Fix a corner case in live-range separation that would hang SDCC on compiling the pic14 library (and result in some missed optimizations for other ports).
 	* src/pdk/gen.c:
 	  Fix a pdk codegen issue that could result in invalid asm for pdk13 on bitwise and in if condition.
+	* src/SDCCopt.c:
+	  Fix an issue in support function call handling that gets exposed in the genconstprop branch via incorrect elimination of an iCode in live range separation.
 
 2023-06-11 Philipp Klaus Krause <philipp@colecovision.eu>
 
